# rknpu2_ros

./: .gitmodules  LICENSE  README.md
model/: onnx2rknn.py
model/docker/: dockerfile
rknpu2_ros/: CMakeLists.txt  README.md  package.xml
rknpu2_ros_common/: CMakeLists.txt  README.md  package.xml
rknpu2_ros_common/include/rknpu2_ros_common/: coco_names.hpp  model_loader.h  object.hpp  utils.hpp
rknpu2_ros_yolov5/: CMakeLists.txt  README.md  package.xml
rknpu2_ros_yolov5/include/rknpu2_ros_yolov5/: postprocess.hpp  rknpu2_yolov5.hpp  rknpu2_yolov5_node.hpp
rknpu2_ros_yolov5/src/: main.cc  postprocess.cc  rknpu2_yolov5.cpp  rknpu2_yolov5_node.cpp
